Fixed stretched images

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -57,10 +57,13 @@ h3 {
 .picture-row {
   display: flex;
   padding: 0 20px;
+  justify-content: center;
 
   img {
-    flex-grow: 1;
+    flex-grow: 0;
     flex-shrink: 1;
+    align-self: center;
+    width: 50%;
     box-shadow: 0 0 2px rgba(black, 0.5);
     margin: 10px;
   }
